[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/ui/CharacterPortrait2.png" type="Texture" id=1]
[ext_resource path="res://src/Level/InteractableObject/InteractableObject.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 12 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 12 )

[node name="InteractableObject" type="RigidBody2D"]
collision_layer = 0
collision_mask = 24
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CheckpointArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckpointArea2D"]
shape = SubResource( 1 )

[node name="ItemName" type="Label" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 167.0
margin_bottom = 14.0
rect_scale = Vector2( 0.25, 0.25 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1
valign = 1

[connection signal="body_entered" from="CheckpointArea2D" to="." method="_on_CheckpointArea2D_body_entered"]
[connection signal="body_exited" from="CheckpointArea2D" to="." method="_on_CheckpointArea2D_body_exited"]
